# data-engineer-zoomcamp-2024

week1/: .dockerignore  Dockerfile  docker-compose.yaml
week1/app/: pyproject.toml
week1/homework/: homework.md
week1/notebook/: upload-data.ipynb
week1/terraform/: main.tf  variables.tf
week2/homework/data_exporters/: taxi_to_gcs.py  taxi_to_gcs_partitioned.py
week2/homework/data_loaders/: load_api_data.py  load_from_gcs.py  test_load.py  test_loader.sql
week2/homework/transformers/: transform_staged_data.py  transform_taxi_data.py
week_t/mage-zoomcamp/: docker-compose.yml
