[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jiakai Li <li.jiakai@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
sqlalchemy = "^2.0.25"
jupyter = "^1.0.0"
pgcli = "^4.0.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"